# renderdoc

./: .gitignore  .travis.yml  CMakeLists.txt  renderdoc.sln
.github/workflows/: ci.yml
docs/: verify-docstrings.py
docs/CONTRIBUTING/: Mac-Status.md
qrenderdoc/: qrenderdoc.pro  qrenderdoc_local.vcxproj  qrenderdoc_local.vcxproj.filters
qrenderdoc/Code/: AppleUtils.mm  CaptureContext.cpp  CaptureContext.h  QRDUtils.cpp
qrenderdoc/Code/Interface/: QRDInterface.h
qrenderdoc/Code/pyrenderdoc/: renderdoc.i
qrenderdoc/Widgets/: BufferFormatSpecifier.cpp
qrenderdoc/Windows/: PythonShell.cpp  ShaderViewer.cpp  TextureViewer.cpp
qrenderdoc/Windows/Dialogs/: SettingsDialog.cpp  SettingsDialog.h
qrenderdoc/Windows/PipelineState/: MetalPipelineStateViewer.cpp  MetalPipelineStateViewer.h  MetalPipelineStateViewer.ui  PipelineStateViewer.cpp  PipelineStateViewer.h
renderdoc/: CMakeLists.txt  renderdoc.vcxproj  renderdoc.vcxproj.filters
renderdoc.xcworkspace/: contents.xcworkspacedata
renderdoc.xcworkspace/xcshareddata/xcschemes/: qrenderdoc.xcscheme
renderdoc/api/replay/: control_types.h  metal_pipestate.h  pipestate.h  pipestate.inl  rdcarray.h  renderdoc_replay.h  renderdoc_tostr.inl  replay_enums.h
renderdoc/common/: globalconfig.h
renderdoc/core/: core.cpp  core.h  image_viewer.cpp  remote_server.cpp  replay_proxy.cpp  replay_proxy.h
renderdoc/data/: renderdoc.rc  resource.h
renderdoc/data/glsl/: checkerboard.frag  debuguniforms.h
renderdoc/driver/d3d11/: d3d11_renderstate.cpp  d3d11_replay.h  renderdoc_d3d11.vcxproj
renderdoc/driver/d3d12/: d3d12_command_list_wrap.cpp  d3d12_debug.cpp  d3d12_device.cpp  d3d12_dxil_debug.cpp  d3d12_overlay.cpp  d3d12_pixelhistory.cpp  d3d12_replay.cpp  d3d12_replay.h  d3d12_serialise.cpp  d3d12_shader_cache.cpp  d3d12_shader_cache.h  d3d12_shaderdebug.cpp  renderdoc_d3d12.vcxproj
renderdoc/driver/dxgi/: renderdoc_dxgi.vcxproj
renderdoc/driver/gl/: CMakeLists.txt  cgl_cocoa.h  cgl_cocoa_context.h  cgl_cocoa_context.mm  cgl_cocoa_window.mm  cgl_hooks.cpp  cgl_jake.cpp  cgl_jake.h  cgl_jake_cocoa.mm  cgl_platform.cpp  cgl_platform_helpers.mm  gl_common.cpp  gl_common.h  gl_debug.cpp  gl_hooks.cpp  gl_initstate.cpp  gl_overlay.cpp  gl_replay.h  renderdoc_gl.vcxproj
renderdoc/driver/metal/: CMakeLists.txt  TODO.md  metal_blit_command_encoder.cpp  metal_blit_command_encoder.h  metal_blit_command_encoder_bridge.mm  metal_buffer.cpp  metal_buffer.h  metal_buffer_bridge.h  metal_buffer_bridge.mm  metal_command_buffer.cpp  metal_command_buffer.h  metal_command_buffer_bridge.h  metal_command_buffer_bridge.mm  metal_command_queue.cpp  metal_command_queue.h  metal_command_queue_bridge.h  metal_command_queue_bridge.mm  metal_common.cpp  metal_common.h  metal_core.cpp  metal_core.h  metal_debug.cpp  metal_debug_manager.cpp  metal_debug_manager.h  metal_debug_render.cpp  metal_device.cpp  metal_device.h  metal_device_bridge.h  metal_device_bridge.mm  metal_dispatch_table.h  metal_dispatch_table_bridge.mm  metal_function.cpp  metal_function.h  metal_function_bridge.h  metal_function_bridge.mm  metal_helpers.h  metal_helpers_bridge.h  metal_helpers_bridge.mm  metal_hook.cpp  metal_hook.h  (+52 more)
renderdoc/driver/vulkan/: renderdoc_vulkan.vcxproj  (+13 more)
renderdoc/os/: os_specific.h
renderdoc/replay/: dummy_driver.cpp  dummy_driver.h  renderdoc_serialise.inl  replay_controller.cpp  replay_controller.h  replay_driver.h
renderdoccmd/: CMakeLists.txt  renderdoccmd.cpp  renderdoccmd.vcxproj  renderdoccmd_android.cpp  renderdoccmd_apple.cpp
renderdoccmd/apple/: cocoa_window.mm
scripts/: hash_version.sh
util/test/: README.md
util/travis/: osx_compile.sh
(+68 files in other folders)
