set(sources
  metal_dispatch_table_bridge.mm
  metal_dispatch_table.h
  metal_hook_bridge.mm
  metal_hook.cpp
  metal_hook.h
  metal_device.cpp
  metal_device.h
  metal_device_bridge.mm
  metal_device_bridge.h
  metal_library.cpp
  metal_library.h
  metal_library_bridge.mm
  metal_library_bridge.h
  metal_render_pipeline_state_bridge.mm
  metal_render_pipeline_state.cpp
  metal_render_pipeline_state.h
  metal_render_pipeline_state_bridge.h
  metal_command_queue.cpp
  metal_command_queue.h
  metal_command_queue_bridge.mm
  metal_command_queue_bridge.h
  metal_buffer.cpp
  metal_buffer.h
  metal_buffer_bridge.mm
  metal_buffer_bridge.h
  metal_command_buffer.cpp
  metal_command_buffer.h
  metal_command_buffer_bridge.mm
  metal_command_buffer_bridge.h
  metal_render_command_encoder.cpp
  metal_render_command_encoder.h
  metal_render_command_encoder_bridge.mm
  metal_render_command_encoder_bridge.h
  metal_function.cpp
  metal_function.h
  metal_function_bridge.mm
  metal_function_bridge.h
  metal_common.cpp
  metal_common.h
  metal_core.cpp
  metal_core.h
  metal_manager.h
  metal_resources.cpp
  metal_resources.h
  metal_replay.cpp
  metal_replay.h
  metal_stringise.cpp
  metal_stringise.h
  metal_types.h
  )

add_library(rdoc_metal OBJECT ${sources})
target_compile_definitions(rdoc_metal ${RDOC_DEFINITIONS})
target_include_directories(rdoc_metal ${RDOC_INCLUDES})
